test/tests/nek_errors/invalid_field/nek_no_temp.i
[Problem]
  type = NekRSStandaloneProblem
  casename = 'pyramid'
  output = 'temperature'
[]

[Mesh]
  type = NekRSMesh
  volume = true
[]

[Executioner]
  type = Transient

  [TimeStepper]
    type = NekTimeStepper
  []
[]
